# nesfr_vr_system

./: .gitmodules  CMakeLists.txt  README.md  nesfr_vr.service  nesfr_vr.sh  run.sh  video_stream  video_stream.cpp
cli/: CMakeLists.txt
cli/include/: config.h  logging.h
cli/src/: nesfr_vr_system_cli.cpp
configs/: hw_config.json  hw_config_camera_00_1920x1080.json  hw_config_camera_01_1280x720.json  hw_config_nesfr4_1280x720.json  hw_config_nesfr4_1920x1080.json  hw_config_nesfr4_640x480.json  hw_config_nesfrvr-dev-02_1280x720.json  hw_config_nesfrvr-dev-02_640x480.json  hw_config_nesfrvr-dev-03_1280x720.json  hw_config_nesfrvr-dev-03_1920x1080.json  hw_config_nesfrvr-dev-03_640x480.json  hw_config_nesfrvr_dev_02_1280x720.json  hw_config_nesfrvr_dev_02_1920x1080.json  hw_config_nesfrvr_dev_02_640x480.json  hw_config_nesfrvr_dev_03_1280x720.json  hw_config_nesfrvr_dev_03_1920x1080.json  hw_config_nesfrvr_dev_03_640x480.json
docker/: .tmux.conf  AGX.Dockerfile  AGX.ros2.Dockerfile  Dockerfile  nesfr_vr_entrypoint.sh  ros2.Dockerfile  run_docker.AGX.release.sh  run_docker.AGX.ros2.release.sh  run_docker.AGX.ros2.sh  run_docker.AGX.sh  run_docker.sh
include/: BaseCamera.hpp  BaseGimbal.hpp  BaseRover.hpp  BaseStereoCamera.hpp  CtrlClient.hpp  GimbalController.hpp  Nesfr7ROS2.hpp  NesfrVR.hpp  RoverController.hpp  Utils.hpp  V4L2Camera.hpp  V4L2StereoCamera.hpp  VRInput.hpp  VideoStreamer.hpp  config.h  config.hpp  ctrlclient.hpp  logging.h
libs/spinnaker-2.7.0.128-arm64/: libgentl_2.7.0.128_arm64.deb  spinupdate_2.7.0.128_arm64.deb  spinview-qt-dev_2.7.0.128_arm64.deb
nesfr_vr_ros2/: CMakeLists.txt  package.xml
qt5gui/: main.cpp  nesfr_vr_qt5gui.pro
ros2/: .gitignore  CMakeLists.txt  nesfr_vr_ros2_entrypoint.sh  nesfr_vr_ros2_run_release.sh  package.xml  run_release_nesfr_vr_ros2.sh
ros2/packaging/: .gitignore
ros2/packaging/docker_base/: Makefile  nesfr_vr_ros2_docker.service  nesfr_vr_ros2_docker.sh
ros2/packaging/docker_base/debian/: changelog  control  postinst  prerm  rules
ros2/src/: nesfrvr_ros2.cpp
ros2/src/nesfr_vr_ros2/: CMakeLists.txt  package.xml
ros2/src/nesfr_vr_ros2/debian/: changelog  control  copyright  postinst  postrm  prerm  rules
ros2/src/nesfr_vr_ros2/launch/: nesfr_vr_with_nesfr4.launch.py
scripts/: receiver_aravis_udp_streaming_left.sh  receiver_aravis_udp_streaming_right.sh  sender_aravis_udp_streaming_left.sh  sender_aravis_udp_streaming_right.sh
src/: .gitignore  CtrlClient.cpp  GimbalController.cpp  Nesfr7ROS2.cpp  NesfrVR.cpp  RoverController.cpp  V4L2Camera.cpp  V4L2Device.cpp  V4L2StereoCamera.cpp  VideoStreamTest.cpp  VideoStreamer.cpp  ctrlclient.cpp  video_stream.cpp
utils/: README.md
utils/generate_imgs/: generate_imgs.cpp
utils/video_dev_identifier/: CMakeLists.txt
utils/vr_device_scanner/: vr_device_scanner.cpp
video_streamer/include/: BaseAudio.hpp  CtrlClient.hpp  V4L2Camera.hpp  V4L2Device.hpp  VideoStreamer.hpp  video_stream.hpp
video_streamer/libs/spinnaker-2.7.0.128-arm64/: libspinnaker-c-dev_2.7.0.128_arm64.deb  libspinnaker-c_2.7.0.128_arm64.deb  libspinnaker-dev_2.7.0.128_arm64.deb  libspinvideo-c-dev_2.7.0.128_arm64.deb  libspinvideo-c_2.7.0.128_arm64.deb  libspinvideo-dev_2.7.0.128_arm64.deb  libspinvideo_2.7.0.128_arm64.deb  spinupdate-dev_2.7.0.128_arm64.deb  spinview-qt_2.7.0.128_arm64.deb
video_streamer/scripts/: receiver_aravis_jpeg_udp_streaming_left.sh  receiver_aravis_jpeg_udp_streaming_right.sh  receiver_aravis_udp_streaming_left.sh  receiver_aravis_udp_streaming_right.sh  scan_devices.sh  sender_aravis_jpeg_udp_streaming_left.sh  sender_aravis_jpeg_udp_streaming_right.sh  sender_aravis_udp_streaming_right.sh
video_streamer/src/: V4L2Camera.cpp  V4L2Device.cpp  VideoStreamTest.cpp  video_stream.cpp
video_streamer/utils/calibration/: calibrate_stereo_camera.py
video_streamer/utils/generate_imgs/: CMakeLists.txt  indexed_remove.py  remove_imgs.py
video_streamer/utils/ip_identifier/: CMakeLists.txt  ip_identifier.cpp
video_streamer/utils/video_dev_identifier/: video_dev_identifier.cpp
video_streamer/utils/vr_device_scanner/: CMakeLists.txt
